force-app/main/default/objects/CarColor__c/CarColor__c.object-meta.xml
<CustomObject>
    <label>Car with Color</label>
    <nameField>
        <displayFormat>CC{0000}</displayFormat>
        <label>Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars with Colors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>