force-app/main/default/objects/CarColor__c/fields/Car_Color__c.field-meta.xml
<CustomField>
    <fullName>Car_Color__c</fullName>
    <formula>Cars__r.Name &amp; &quot;-&quot; &amp; Colors__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Color</label>
    <type>Text</type>
</CustomField>