force-app/main/default/objects/CarColor__c/fields/Cars__c.field-meta.xml
<CustomField>
    <fullName>Cars__c</fullName>
    <label>Cars</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Cars with Colors</relationshipLabel>
    <relationshipName>Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>