force-app/main/default/objects/CarColor__c/fields/Colors__c.field-meta.xml
<CustomField>
    <fullName>Colors__c</fullName>
    <label>Colors</label>
    <referenceTo>Color__c</referenceTo>
    <relationshipLabel>Cars with Colors</relationshipLabel>
    <relationshipName>Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>